# schema-extractor

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/app/: Dockerfile
docker/mssql/: Dockerfile  init.sql
docker/mysql/: Dockerfile  init.sql
docker/postgres/: Dockerfile  init.sql
schema_extractor/: mssql_schema_extractor.py  mysql_schema_extractor.py  postgres_schema_extractor.py
tests/: test_db_connection.py
