[tool.poetry]
name = "schema-extractor"
version = "0.1.0"
description = ""
authors = ["apoplexi <shivanandanasharma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
pandas = "^2.2.3"
mysql-connector-python = "^9.0.0"
pyodbc = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
